# zephyr

include/zephyr/posix/: fnmatch.h
lib/posix/c_lib_ext/: fnmatch.c
samples/basic/telemetry_system/: CMakeLists.txt  Kconfig  prj.conf
samples/basic/telemetry_system/app/: my_vars.h
samples/basic/telemetry_system/inc/: communication_interface.h  registry.h  variable_list_example.h
samples/basic/telemetry_system/plotter/: main.py
samples/basic/telemetry_system/src/: main.c  registry.c  telemetry.c  uart_communication.c
